Button 2: Fix My Account buttons spacing issue. See #28.

--- a/button-2/woocommerce.css
+++ b/button-2/woocommerce.css
@@ -504,7 +504,9 @@ table.cart .product-remove a {
 
 .woocommerce-account .woocommerce-MyAccount-content .button {
   word-wrap: normal;
-  word-break: normal; }
+  word-break: normal;
+  display: inline-block;
+  margin: .5em; }
 
 @media screen and (min-width: 768px) {
   .woocommerce-account .woocommerce-MyAccount-navigation {
